<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.shoksworld.greendao.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_all_vehicles_text"
        android:id="@+id/get_all_vehicles"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_vehicle_text"
        android:id="@+id/add_vehicle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicle_name_edittext"
        android:inputType="text"
        android:hint="@string/vehicle_name_hint"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicle_type_edittext"
        android:inputType="text"
        android:hint="@string/vehicle_type_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicle_cost_edittext"
        android:hint="@string/vehicle_cost_hint"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:text="@string/submit_text"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vehicles_recycler"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
